Improved cross correlation

--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -187,7 +187,7 @@
     "qprof_05_n0 = pickle.load(open('data/TS45511_q05_ti0_te72900_n0.pkl','rb')); qprof_05_n0['title']=r'$q_{0.5}$ - $n=0$'; qprof_05_n0['c']='xkcd:cobalt blue'; qprof_05_n0['ls']='-'\n",
     "qprof_15_n0 = pickle.load(open('data/TS45511_q15_ti0_te72000_n0.pkl','rb')); qprof_15_n0['title']=r'$q_{1.5}$ - $n=0$'; qprof_15_n0['c']='xkcd:dark red'; qprof_15_n0['ls']='-'\n",
     "\n",
-    "qprof_gdp = pickle.load(open('data/gdp_ti0_te597900.pkl','rb')); qprof_gdp['title']=r'gdp'; qprof_gdp['c']='darkorange'\n",
+    "#qprof_gdp = pickle.load(open('data/gdp_ti0_te597900.pkl','rb')); qprof_gdp['title']=r'gdp'; qprof_gdp['c']='darkorange'\n",
     "\n",
     "qprof_05new = pickle.load(open('data/TS45511_q05new_ti36180_te102780.pkl','rb')); qprof_05new['title']=r'$q_{0.5}^{NEW}$'; qprof_05new['c']='xkcd:lightish blue'; qprof_05new['ls']='-'\n",
     "\n",
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 12,
    "id": "a28480cc-d677-4af2-8e30-32c3b5c65408",
    "metadata": {
     "tags": []
@@ -1328,7 +1328,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4aa9ff17234547b6974fcc51435012de",
+       "model_id": "a1f2d39de3c64d32a598f9e698e094c9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1345,7 +1345,7 @@
        "<function __main__.update_plot(N1, N2, float_range_rho, dpi_adjust, float_range_time, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, qgdp_bool, signal1, signal2)>"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1353,7 +1353,8 @@
    "source": [
     "from mpl_toolkits.axes_grid1.inset_locator import inset_axes\n",
     "\n",
-    "symetrical_cmap = 0\n",
+    "def extract_fluctuations(signal2D):\n",
+    "    return signal2D - np.mean(signal2D,axis=0)\n",
     "\n",
     "def update_plot(N1,N2,float_range_rho,dpi_adjust,float_range_time,\n",
     "               q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,qgdp_bool,\n",
@@ -1372,16 +1373,14 @@
     "    \n",
     "    plt.close('all')\n",
     "    \n",
-    "    fig = plt.figure(figsize=(12*len(q_ar),16), dpi=dpi_adjust)\n",
+    "    fig = plt.figure(figsize=(11*len(q_ar),16), dpi=dpi_adjust)\n",
     "    fig.suptitle('Cross correlation between %s and %s' %(signal1,signal2))\n",
     "    \n",
-    "    #gs = gridspec.GridSpec(3*len(q_ar),3)\n",
     "    gs = gridspec.GridSpec(3,len(q_ar))\n",
     "    \n",
-    "    ##############################\n",
+    "    ###############################\n",
     "    #Figure 3 layout - Cross correlation at a given radius\n",
-    "    ##############################\n",
-    "    #ax_cc1D = fig.add_subplot(gs[3*iq+2:3*iq+3, :]) \n",
+    "    ###############################\n",
     "    ax_cc1D = fig.add_subplot(gs[2, :]) \n",
     "    ax_cc1D.set_ylim(-1.1,1.1)\n",
     "    ax_cc1D.axhline(y=0,c='k',ls='--'); ax_cc1D.axhline(y=1,c='gray',ls='--'); ax_cc1D.axhline(y=-1,c='gray',ls='--')\n",
@@ -1403,20 +1402,17 @@
     "\n",
     "        it_CC_range = np.r_[itlim//3:2*itlim//3]\n",
     "        Cfg = np.zeros( (irhomax-irhomin, 2*itlim//3 ) )\n",
-    "\n",
-    "        #p_ma = uniform_filter1d(uniform_filter1d(q[param],size=N,axis=1),size=N,axis=1)\n",
     "        \n",
     "        signal1_ar = uniform_filter1d(uniform_filter1d(q[signal1],size=N1,axis=1),size=N1,axis=1)\n",
     "        signal2_ar = uniform_filter1d(uniform_filter1d(q[signal2],size=N2,axis=1),size=N2,axis=1)\n",
-    "        \n",
-    "        for ir0 in np.r_[irhomin:irhomax]:\n",
     "\n",
-    "            f = signal1_ar[itmin:itmax,ir0] - np.mean(signal1_ar[itmin:itmax,ir0])\n",
-    "            g = signal2_ar[itmin:itmax,ir0] - np.mean(signal2_ar[itmin:itmax,ir0])\n",
+    "        f = extract_fluctuations(signal1_ar[itmin:itmax,irhomin:irhomax])\n",
+    "        g = extract_fluctuations(signal2_ar[itmin:itmax,irhomin:irhomax])\n",
     "\n",
-    "            norm = np.sqrt( np.sum(f[it_CC_range]**2) ) * np.sqrt( np.sum(g[it_CC_range]**2) ) \n",
-    "            for itau in itau_range:\n",
-    "                Cfg[ir0-irhomin,itau + itlim//3] = np.sum(f[it_CC_range] * g[it_CC_range+itau])/norm\n",
+    "        norm = np.sqrt( np.sum(f[it_CC_range,:]**2,axis=0) ) * np.sqrt( np.sum(g[it_CC_range,:]**2,axis=0) )\n",
+    "        for itau in itau_range:\n",
+    "            Cfg[:,itau + itlim//3] = np.sum(f[it_CC_range,:] * g[it_CC_range+itau,:],axis=0)/norm\n",
+    "\n",
     "\n",
     "        rhomin_avg,rhomax_avg = float_range_rho\n",
     "        irhomin_avg = (np.abs(q['rho'] - rhomin_avg )).argmin()\n",
@@ -1424,7 +1420,6 @@
     "        ##############################\n",
     "        #Figure - 2D cross correlation\n",
     "        ##############################\n",
-    "        #ax_map = fig.add_subplot(gs[3*iq:3*iq+1, :]) \n",
     "        ax_map = fig.add_subplot(gs[0, iq]) \n",
     "        ax_map.set_title('Cross correlation over radius')\n",
     "        p=ax_map.pcolormesh(q['rho'][irhomin:irhomax],tau_range,Cfg.T,vmin=-1,vmax=1)\n",
@@ -1441,12 +1436,10 @@
     "        ##############################\n",
     "        #Figure - Time evolution\n",
     "        ##############################\n",
-    "        #color1 = 'xkcd:kelly green'\n",
     "        color1 = 'xkcd:green'\n",
     "        color2 = 'xkcd:purple'\n",
     "        \n",
     "        itbeg = (np.abs(q['time'] - 0e3 )).argmin()//3*3\n",
-    "        #ax_tevol1 = fig.add_subplot(gs[3*iq+1:3*iq+2, :]) \n",
     "        ax_tevol1 = fig.add_subplot(gs[1, iq]) \n",
     "        ax_tevol1.set_title('%s - Time evolution avg on $%.2f < r/a < %.2f$' %(q['title'],rhomin_avg,rhomax_avg))\n",
     "        ax_tevol1.plot(q['time'][itbeg:],np.mean(q[signal1][itbeg:,irhomin_avg:irhomax_avg],axis=1),c=color1,ls='--')\n",
