Change simulation data to hdf5 + minor changes

--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -46,7 +46,6 @@
     "from scipy import special\n",
     "import scipy.integrate as integrate\n",
     "from scipy.misc import derivative\n",
-    "import h5py as h5\n",
     "import pickle\n",
     "import time\n",
     "from scipy.interpolate import InterpolatedUnivariateSpline\n",
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -175,24 +174,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['time', 'rg', 'rho', 'q', 'eps', 'T', 'n', 'VP', 'VT', 'RSphi', 'RSpol', 'Phi00', 'dRSphidr', 'dRSpoldr', 'dVTdr', 'dVPdr', 'Er', 'dErdr', 'nustar', 'Gamma_vD', 'Gamma_vE', 'Gamma_vEn0', 'Gamma_vEndiff0', 'Phi01', 'dPhi01dr', 'Qpar_vD', 'Qpar_vE', 'Qpar_vEn0', 'Qperp_vD', 'Qperp_vE', 'Qperp_vEn0', 'Qtot_vD', 'Qtot_vE', 'Qtot_vEn0', 'RSphi_vD', 'RSphi_vE', 'RSphi_vEn0', 'RSpol_vD', 'RSpol_vE', 'RSpol_vEn0', 'Qtot', 'nu_i', 'delta_n_avg', 'turb_int_avg', 'turb_int_sq_avg', 'title', 'c', 'ls'])\n"
+      "dict_keys(['Er', 'Gamma_vD', 'Gamma_vE', 'Gamma_vEn0', 'Gamma_vEndiff0', 'IturbGC_FSavg', 'Phi00', 'Phi01', 'Ppar', 'Pperp', 'Qpar_vD', 'Qpar_vE', 'Qpar_vEn0', 'Qperp_vD', 'Qperp_vE', 'Qperp_vEn0', 'Qtot', 'Qtot_vD', 'Qtot_vE', 'Qtot_vEn0', 'RSphi', 'RSphi_vD', 'RSphi_vE', 'RSphi_vEn0', 'RSpol', 'RSpol_vD', 'RSpol_vE', 'RSpol_vEn0', 'T', 'VP', 'VT', 'dErdr', 'dPhi01dr', 'dRSphidr', 'dRSpoldr', 'dVPdr', 'dVTdr', 'delta_n_avg', 'eps', 'n', 'nIturbGC_FSavg', 'nu_i', 'nustar', 'q', 'rg', 'rho', 'spreading_0deg', 'spreading_180deg', 'spreading_270deg', 'spreading_90deg', 'spreading_FSavg', 'time', 'turb_int_avg', 'turb_int_sq_avg', 'title', 'c', 'ls'])\n"
      ]
     }
    ],
    "source": [
-    "qprof_05 = pickle.load(open('data/TS45511_q05_ti0_te147600.pkl','rb')); qprof_05['title']=r'$q_{0.5}$'; qprof_05['c']='xkcd:electric blue'; qprof_05['ls']='-'\n",
-    "qprof_1  = pickle.load(open('data/TS45511_q1_ti60300_te148500.pkl','rb')); qprof_1['title']=r'$q_{1.0}$'; qprof_1['c']='xkcd:bluish purple'; qprof_1['ls']='-'\n",
-    "qprof_15 = pickle.load(open('data/TS45511_q15_ti0_te153900.pkl','rb')); qprof_15['title']=r'$q_{1.5}$'; qprof_15['c']='xkcd:watermelon'; qprof_15['ls']='-'\n",
+    "import h5py\n",
     "\n",
-    "qprof_05_n0 = pickle.load(open('data/TS45511_q05_ti0_te72900_n0.pkl','rb')); qprof_05_n0['title']=r'$q_{0.5}$ - $n=0$'; qprof_05_n0['c']='xkcd:cobalt blue'; qprof_05_n0['ls']='-'\n",
-    "qprof_15_n0 = pickle.load(open('data/TS45511_q15_ti0_te72000_n0.pkl','rb')); qprof_15_n0['title']=r'$q_{1.5}$ - $n=0$'; qprof_15_n0['c']='xkcd:dark red'; qprof_15_n0['ls']='-'\n",
+    "def hdf5_to_dict(filename):\n",
+    "    \"\"\"Load a dictionary of arrays and strings as unicode characters from an HDF5 file.\"\"\"\n",
+    "    with h5py.File(filename, 'r') as f:\n",
+    "        d = {}\n",
+    "        for k in f.keys():\n",
+    "            v = f[k][()]\n",
+    "            if isinstance(v, bytes):\n",
+    "                d[k] = v.decode('utf-8')\n",
+    "            else:\n",
+    "                d[k] = v\n",
+    "    return d\n",
+    "\n",
+    "#qprof_05 = pickle.load(open('data/TS45511_q05_ti0_te147600.pkl','rb'))\n",
+    "#qprof_1  = pickle.load(open('data/TS45511_q1_ti60300_te148500.pkl','rb'))\n",
+    "#qprof_15 = pickle.load(open('data/TS45511_q15_ti0_te153900.pkl','rb'))\n",
+    "#qprof_05_n0 = pickle.load(open('data/TS45511_q05_ti0_te72900_n0.pkl','rb'))\n",
+    "#qprof_15_n0 = pickle.load(open('data/TS45511_q15_ti0_te72000_n0.pkl','rb'))\n",
+    "\n",
+    "qprof_05 = hdf5_to_dict('data/TS45511_q05.hdf5'); qprof_05['title']=r'$q_{0.5}$'; qprof_05['c']='xkcd:electric blue'; qprof_05['ls']='-'\n",
+    "qprof_1  = hdf5_to_dict('data/TS45511_q1.hdf5'); qprof_1['title']=r'$q_{1.0}$'; qprof_1['c']='xkcd:bluish purple'; qprof_1['ls']='-'\n",
+    "qprof_15 = hdf5_to_dict('data/TS45511_q15.hdf5'); qprof_15['title']=r'$q_{1.5}$'; qprof_15['c']='xkcd:watermelon'; qprof_15['ls']='-'\n",
+    "\n",
+    "qprof_05_n0 = hdf5_to_dict('data/TS45511_q05_n0.hdf5'); qprof_05_n0['title']=r'$q_{0.5}$ - $n=0$'; qprof_05_n0['c']='xkcd:cobalt blue'; qprof_05_n0['ls']='-'\n",
+    "qprof_15_n0 = hdf5_to_dict('data/TS45511_q15_n0.hdf5'); qprof_15_n0['title']=r'$q_{1.5}$ - $n=0$'; qprof_15_n0['c']='xkcd:dark red'; qprof_15_n0['ls']='-'\n",
     "\n",
     "#qprof_gdp = pickle.load(open('data/gdp_ti0_te597900.pkl','rb')); qprof_gdp['title']=r'gdp'; qprof_gdp['c']='darkorange'\n",
     "\n",
     "qprof_05new = pickle.load(open('data/TS45511_q05new_ti36180_te102780.pkl','rb')); qprof_05new['title']=r'$q_{0.5}^{NEW}$'; qprof_05new['c']='xkcd:lightish blue'; qprof_05new['ls']='-'\n",
     "\n",
     "print(qprof_05.keys())\n",
-    "#print(qprof_05_n0['Gamma_vEn0'])\n",
     "\n",
     "daltonian = 0\n",
     "if daltonian:\n",
@@ -243,15 +261,21 @@
     "    \n",
     "## Defining custom values\n",
     "for iq,q in enumerate(q_ar):\n",
-    "    q['gradT'] = np.gradient(q['T'],q['rg'],axis=1)\n",
-    "    q['Ptransfert'] = -q['dRSpoldr'] * (-q['Er'])\n",
-    "    q['Ptransfert_vE'] = -np.gradient(q['RSpol_vE'],q['rg'],axis=1) * (-q['Er'])\n",
-    "    q['Ptransfert_vD'] = -np.gradient(q['RSpol_vD'],q['rg'],axis=1) * (-q['Er'])\n",
+    "    q['gradT']             = np.gradient(q['T'],q['rg'],axis=1)\n",
+    "    q['Ptransfert']        = -q['dRSpoldr'] * (-q['Er'])\n",
+    "    q['Ptransfert_w_prefactor']  = -q['dRSpoldr'] * (-q['Er']) / (1 + 2 * q['q']**2)\n",
+    "    q['Ptransfert_vE']     = -np.gradient(q['RSpol_vE'],q['rg'],axis=1) * (-q['Er'])\n",
+    "    q['Ptransfert_vD']     = -np.gradient(q['RSpol_vD'],q['rg'],axis=1) * (-q['Er'])\n",
     "    q['Ptransfert_approx'] = q['RSpol'] * (-q['dErdr'])\n",
-    "    q['dErdt'] = np.gradient(q['Er'],q['time'],axis=0)\n",
-    "    q['Jr'] = -(q['Gamma_vE']+q['Gamma_vD'])\n",
-    "    q['Jr_vD'] = -q['Gamma_vD']\n",
-    "    q['Jr_vE'] = -q['Gamma_vE']"
+    "    q['dErdt']             = np.gradient(q['Er'],q['time'],axis=0)\n",
+    "    q['dIsqdr']            = np.gradient(q['turb_int_sq_avg'],q['rg'],axis=1)\n",
+    "    q['dIdr']              = np.gradient(np.sqrt(q['turb_int_sq_avg']),q['rg'],axis=1)\n",
+    "    q['Jr']                = -(q['Gamma_vE']+q['Gamma_vD'])\n",
+    "    q['Jr_vD']             = -q['Gamma_vD']\n",
+    "    q['Jr_vE']             = -q['Gamma_vE']\n",
+    "    q['neo_energy_evol']   = -q['Ptransfert'] + 0.5*np.gradient(-q['Er']**2,q['time'],axis=0)\n",
+    "    q['neo_energy_evol_w_prefactor'] = -q['Ptransfert_w_prefactor'] + 0.5*np.gradient(-q['Er']**2,q['time'],axis=0)\n",
+    "    q['tevol_VEsq']        = 0.5*np.gradient(-q['Er']**2,q['time'],axis=0)"
    ]
   },
   {
@@ -351,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "id": "8ce0e36c-fce9-4840-a583-0c5d98c19af1",
    "metadata": {
     "jupyter": {
@@ -363,7 +387,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a2ff4379f65424b9bd830e0074a5f45",
+       "model_id": "7fb78935786441b684b85f1c8560bf18",
        "version_major": 2,
        "version_minor": 0
       },
@@ -380,7 +404,7 @@
        "<function __main__.update_plot(N, colormap_range, dpi_adjust, param, param2, float_range_time, float_range_rho, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool)>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +451,7 @@
     "    \n",
     "    for iq,q in enumerate(q_ar):\n",
     "\n",
-    "        irhomin = (np.abs(q['rho'] - 0.0 )).argmin()\n",
+    "        irhomin = (np.abs(q['rho'] - 0.1 )).argmin()\n",
     "        irhomax = (np.abs(q['rho'] - 1.1 )).argmin()\n",
     "\n",
     "        itmin = (np.abs(q['time'] - 0e3  )).argmin()\n",
@@ -444,6 +468,7 @@
     "        ax_rprof.plot(q['rho'][irhomin:irhomax], np.mean( p_ma[itmin_avg:itmax_avg,irhomin:irhomax],axis=0),ls=q['ls'],c=q['c'],label=q['title'])\n",
     "        ax_rprof.set_xlabel(r'$r/a$')\n",
     "        ax_rprof.axhline(y=0,c='k',ls='--')\n",
+    "        ax_rprof.axvline(x=1,c='k',ls='--')\n",
     "        ax_rprof.legend()\n",
     "        \n",
     "        if param2:\n",
@@ -765,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "42778907-184d-4526-9dd4-7da03b4a4a6a",
    "metadata": {
     "colab": {
@@ -786,7 +811,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97b38e95ab9342da8c0a5fa35f5388a1",
+       "model_id": "a9023e7f54ec48f79fa7d8fb225a7b71",
        "version_major": 2,
        "version_minor": 0
       },
@@ -803,7 +828,7 @@
        "<function __main__.update_plot(N, colormap_range, dpi_adjust, param, float_range_time, float_range_rho, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool)>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,11 +837,7 @@
     "plt.close('all')\n",
     "import matplotlib.colors as colors\n",
     "\n",
-    "#q_ar = [qprof_05,qprof_15]\n",
-    "\n",
     "symetrical_cmap = 0\n",
-    "\n",
-    "#param= 'VP'\n",
     "\n",
     "def update_plot(N,colormap_range,dpi_adjust,param,float_range_time,float_range_rho,\n",
     "               q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool):\n",
@@ -851,7 +872,7 @@
     "    for iq,q in enumerate(q_ar):\n",
     "\n",
     "        irhomin = (np.abs(q['rho'] - 0.0 )).argmin()\n",
-    "        irhomax = (np.abs(q['rho'] - 1.1 )).argmin()\n",
+    "        irhomax = (np.abs(q['rho'] - 1.0 )).argmin()\n",
     "\n",
     "        itmin = (np.abs(q['time'] - 0e3  )).argmin()\n",
     "        itmax = (np.abs(q['time'] - 150e3 )).argmin()\n",
@@ -948,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "0bd8c72f-d8f3-441d-bf05-dc7442674749",
    "metadata": {
     "colab": {
@@ -969,7 +990,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7754681f9684fb6aca719dd6c58e26c",
+       "model_id": "c0d5af2e1b674e19900440d07c0dfd88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -986,7 +1007,7 @@
        "<function __main__.update_plot(N, colormap_range, dpi_adjust, param, float_range_time, float_range_rho, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, DFTradial_avg1_bool, DFTradial_avg2_bool, show_omega_theo)>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 26,
    "id": "28430aa3-fa1c-4b75-83c6-4d7a72dc3460",
    "metadata": {
     "collapsed": true,
@@ -1153,7 +1174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "414e4d94ba9a4121b1008b7484221a11",
+       "model_id": "2da520d0c9fd48a9b0c895f60e34b6e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1170,7 +1191,7 @@
        "<function __main__.update_plot(N, colormap_range, dpi_adjust, param, float_range_time, float_range_rho, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, show_omega_theo, mode)>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1306,7 @@
     "    fig.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
     "\n",
     "float_range_time_slider = widgets.FloatRangeSlider(value=[100e3, 145e3], min=0, max=150e3, step=1000, description='Time range', layout=Layout(width='50%'), style = {'description_width': 'initial'})\n",
-    "    \n",
+    "\n",
     "float_range_rho_slider = widgets.FloatRangeSlider(value=[0.84, 0.86], min=0, max=1.2, step=0.01, description='Normalized radius range', layout=Layout(width='50%'), style = {'description_width': 'initial'})\n",
     "    \n",
     "interact(update_plot, \n",
@@ -1319,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "a28480cc-d677-4af2-8e30-32c3b5c65408",
    "metadata": {
     "tags": []
@@ -1328,7 +1349,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1f2d39de3c64d32a598f9e698e094c9",
+       "model_id": "12f30560fb844eb7b83f4c4b2bcd03a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1345,7 +1366,7 @@
        "<function __main__.update_plot(N1, N2, float_range_rho, dpi_adjust, float_range_time, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, qgdp_bool, signal1, signal2)>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2219,7 +2240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6081a227-27fb-4d69-8194-66c6339a4189",
    "metadata": {
     "colab": {
@@ -2240,7 +2261,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9874b419bafb4907b36ce4241ac93226",
+       "model_id": "8e68e400c9ca4c84ae58dcb9686100fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2720,6 +2741,108 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a06d592e",
+   "metadata": {},
+   "source": [
+    "## <font color='coral'>**Travail en cours**</font> - Profil des termes dans l'équation $\\frac{1}{2} \\partial_t V_E^2 = - \\langle \\Pi_{r\\theta} \\rangle V_E - \\nu_\\theta (V_E - V_{neo}) V_E$\n",
+    "/!\\ Ici on estime $- \\nu_\\theta (V_E - V_{neo}) V_E = \\frac{1}{2} \\partial_t V_E^2 + \\langle \\Pi_{r\\theta} \\rangle V_E$ donc on ne vérifie pas une conservation, au contraire on estime qu'elle est toujours vérifiée ce qui permet d'estimer le terme néoclassique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "9d426cdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "86e8942a8f72442c9d03a874f5c57745",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=65.0, description='dpi_adjust', min=30.0, step=1.0), FloatRangeSlider(…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.update_plot(dpi_adjust, float_range_time, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, prefactor_bool)>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def update_plot(dpi_adjust,float_range_time,\n",
+    "               q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,\n",
+    "               prefactor_bool):\n",
+    "\n",
+    "   tmin_avg,tmax_avg = float_range_time\n",
+    "\n",
+    "   q_ar = []\n",
+    "   if q05_bool    : q_ar = np.append(q_ar,qprof_05)\n",
+    "   if q1_bool     : q_ar = np.append(q_ar,qprof_1)\n",
+    "   if q15_bool    : q_ar = np.append(q_ar,qprof_15)\n",
+    "   if q05n0_bool  : q_ar = np.append(q_ar,qprof_05_n0)\n",
+    "   if q15n0_bool  : q_ar = np.append(q_ar,qprof_15_n0)\n",
+    "   if q05new_bool : q_ar = np.append(q_ar,qprof_05new)\n",
+    "\n",
+    "   fig = plt.figure(figsize=(6*len(q_ar),12), dpi=dpi_adjust)\n",
+    "\n",
+    "   for iq,q in enumerate(q_ar):\n",
+    "\n",
+    "      irhomin = (np.abs(q['rho'] - 0.0 )).argmin()\n",
+    "      irhomax = (np.abs(q['rho'] - 1.1 )).argmin()\n",
+    "\n",
+    "      itmin = (np.abs(q['time'] - tmin_avg )).argmin()\n",
+    "      itmax = (np.abs(q['time'] - tmax_avg )).argmin()\n",
+    "\n",
+    "      if prefactor_bool:\n",
+    "         term1 = q['tevol_VEsq']\n",
+    "         term2 = q['neo_energy_evol_w_prefactor']\n",
+    "         term3 = q['Ptransfert_w_prefactor']\n",
+    "      else :\n",
+    "         term1 = q['tevol_VEsq']\n",
+    "         term2 = q['neo_energy_evol']\n",
+    "         term3 = q['Ptransfert']\n",
+    "\n",
+    "      ax = fig.add_subplot(len(q_ar),1,iq+1)\n",
+    "      ax.set_title(q['title'])\n",
+    "      ax.plot(q['rho'][irhomin:irhomax], np.mean(term1[itmin:itmax,irhomin:irhomax],axis=0), label=r'$ \\frac{1}{2}\\partial_t V_E^2$',c='xkcd:blue',lw=3, ls='-')\n",
+    "      ax.plot(q['rho'][irhomin:irhomax], np.mean(term2[itmin:itmax,irhomin:irhomax],axis=0), label=r'$- \\nu_\\theta (V_E - V_{neo}) V_E$',c='xkcd:red',lw=3, ls='-')\n",
+    "      ax.plot(q['rho'][irhomin:irhomax], np.mean(term3[itmin:itmax,irhomin:irhomax],axis=0), label=r'$\\langle \\Pi_{r\\theta} \\times V_{E\\theta} \\rangle$',c='xkcd:purple',lw=3, ls='-')\n",
+    "      ax.axhline(y=0,c='k',ls='--')\n",
+    "      ax.legend()\n",
+    "      ax.set_xlabel(r'$r/a$')\n",
+    "      ax.axvline(x=1,c='k',ls='--')\n",
+    "   fig.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
+    "   \n",
+    "float_range_time_slider = widgets.FloatRangeSlider(value=[100e3, 145e3], min=0, max=150e3, step=1000, description='Time range', layout=Layout(width='50%'), style = {'description_width': 'initial'})\n",
+    "\n",
+    "\n",
+    "interact(update_plot, \n",
+    "         float_range_time=float_range_time_slider,\n",
+    "         dpi_adjust=widgets.FloatSlider(min=30, max=100, step=1,value=dpi_custom),\n",
+    "         q05_bool    = widgets.Checkbox(value=True,description='q05'),\n",
+    "         q1_bool     = widgets.Checkbox(value=False,description='q1'),\n",
+    "         q15_bool    = widgets.Checkbox(value=True,description='q15'),\n",
+    "         q05n0_bool  = widgets.Checkbox(value=False,description='q05n0'),\n",
+    "         q15n0_bool  = widgets.Checkbox(value=False,description='q15n0'),\n",
+    "         q05new_bool = widgets.Checkbox(value=False,description='q05new'),\n",
+    "         prefactor_bool = widgets.Checkbox(value=True,description=r'With or without prefactor $1+2q^2$')\n",
+    "        )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7414de3f-09d8-4217-86cd-c0e7cecdde8b",
    "metadata": {
@@ -3003,7 +3126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
