--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "8ce0e36c-fce9-4840-a583-0c5d98c19af1",
    "metadata": {
     "jupyter": {
@@ -387,7 +387,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fb78935786441b684b85f1c8560bf18",
+       "model_id": "3a8eb2a106064604a149f3cbee5776ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -404,7 +404,7 @@
        "<function __main__.update_plot(N, colormap_range, dpi_adjust, param, param2, float_range_time, float_range_rho, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool)>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,9 +463,11 @@
     "        itmin_avg = (np.abs(q['time'] - tmin_avg )).argmin()\n",
     "        itmax_avg = (np.abs(q['time'] - tmax_avg )).argmin()\n",
     "\n",
+    "        ittest = (np.abs(q['time'] - 40e3  )).argmin()\n",
+    "\n",
     "        ax_rprof = fig.add_subplot(111) \n",
     "        ax_rprof.set_title(r'Radial profile (avg %.0f < t$[\\omega_{c0}^{-1}]$ < %.0f)' % (tmin_avg , tmax_avg) )\n",
-    "        ax_rprof.plot(q['rho'][irhomin:irhomax], np.mean( p_ma[itmin_avg:itmax_avg,irhomin:irhomax],axis=0),ls=q['ls'],c=q['c'],label=q['title'])\n",
+    "        ax_rprof.plot(q['rho'][irhomin:irhomax], np.mean( p_ma[itmin_avg:itmax_avg,irhomin:irhomax] - p_ma[itmin_avg,irhomin:irhomax],axis=0),ls=q['ls'],c=q['c'],label=q['title'])\n",
     "        ax_rprof.set_xlabel(r'$r/a$')\n",
     "        ax_rprof.axhline(y=0,c='k',ls='--')\n",
     "        ax_rprof.axvline(x=1,c='k',ls='--')\n",
@@ -790,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "42778907-184d-4526-9dd4-7da03b4a4a6a",
    "metadata": {
     "colab": {
@@ -811,7 +813,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9023e7f54ec48f79fa7d8fb225a7b71",
+       "model_id": "a7d9ec237fe14e74834a593d7655df04",
        "version_major": 2,
        "version_minor": 0
       },
@@ -828,7 +830,7 @@
        "<function __main__.update_plot(N, colormap_range, dpi_adjust, param, float_range_time, float_range_rho, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool)>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +874,7 @@
     "    for iq,q in enumerate(q_ar):\n",
     "\n",
     "        irhomin = (np.abs(q['rho'] - 0.0 )).argmin()\n",
-    "        irhomax = (np.abs(q['rho'] - 1.0 )).argmin()\n",
+    "        irhomax = (np.abs(q['rho'] - 0.9 )).argmin()\n",
     "\n",
     "        itmin = (np.abs(q['time'] - 0e3  )).argmin()\n",
     "        itmax = (np.abs(q['time'] - 150e3 )).argmin()\n",
@@ -2240,7 +2242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "6081a227-27fb-4d69-8194-66c6339a4189",
    "metadata": {
     "colab": {
@@ -2261,7 +2263,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e68e400c9ca4c84ae58dcb9686100fa",
+       "model_id": "b971878585004ea9a0359e17943bca65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2275,7 +2277,7 @@
    ],
    "source": [
     "plt.rcParams['axes.formatter.limits'] = (-5,6)\n",
-    "q_ar = [qprof_05,qprof_05new,qprof_1,qprof_15]\n",
+    "q_ar = [qprof_05,qprof_1,qprof_15]\n",
     "\n",
     "param_ar = ['turb_int_sq_avg']\n",
     "\n",
@@ -2752,14 +2754,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "9d426cdd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86e8942a8f72442c9d03a874f5c57745",
+       "model_id": "5546243e2d6d469ba3dd9075b80c1393",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2776,7 +2778,7 @@
        "<function __main__.update_plot(dpi_adjust, float_range_time, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, prefactor_bool)>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
