--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -78,7 +78,7 @@
     "cadarache = 12\n",
     "home      = 16\n",
     "\n",
-    "xfigsize  = home\n",
+    "xfigsize  = laptop\n",
     "\n",
     "dpi_laptop = 50\n",
     "dpi_cadarache = 65\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -208,7 +208,8 @@
     "\n",
     "#qprof_gdp = pickle.load(open('data/gdp_ti0_te597900.pkl','rb')); qprof_gdp['title']=r'gdp'; qprof_gdp['c']='darkorange'\n",
     "\n",
-    "qprof_05new = pickle.load(open('data/TS45511_q05new_ti36180_te102780.pkl','rb')); qprof_05new['title']=r'$q_{0.5}^{NEW}$'; qprof_05new['c']='xkcd:lightish blue'; qprof_05new['ls']='-'\n",
+    "qprof_05new = hdf5_to_dict('data/TS45511_q05new.hdf5'); qprof_05new['title']=r'$q_{0.5}^{NEW}$'; qprof_05new['c']='xkcd:lightish blue'; qprof_05new['ls']='-'\n",
+    "\n",
     "\n",
     "print(qprof_05.keys())\n",
     "\n",
@@ -2754,14 +2755,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "9d426cdd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5546243e2d6d469ba3dd9075b80c1393",
+       "model_id": "25d6d88ac7cc424780c1d45b77640127",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2778,7 +2779,7 @@
        "<function __main__.update_plot(dpi_adjust, float_range_time, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, prefactor_bool)>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2840,7 +2841,102 @@
     "         q05n0_bool  = widgets.Checkbox(value=False,description='q05n0'),\n",
     "         q15n0_bool  = widgets.Checkbox(value=False,description='q15n0'),\n",
     "         q05new_bool = widgets.Checkbox(value=False,description='q05new'),\n",
-    "         prefactor_bool = widgets.Checkbox(value=True,description=r'With or without prefactor $1+2q^2$')\n",
+    "         prefactor_bool = widgets.Checkbox(value=True,description=r'With prefactor $1+2q^2$')\n",
+    "        )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8e12b073",
+   "metadata": {},
+   "source": [
+    "## <font color='coral'>**Travail en cours**</font> - Estimation de $\\nu_\\theta$ sur les simus néoclassiques"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b85cb121",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0aab7f012d36403ab1e5ad79d5ba3e6c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=65.0, description='dpi_adjust', min=30.0, step=1.0), FloatRangeSlider(…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.update_plot(dpi_adjust, float_range_time, float_range_rho, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool)>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def update_plot(dpi_adjust,float_range_time,float_range_rho,\n",
+    "               q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool):\n",
+    "\n",
+    "   tmin_avg,tmax_avg = float_range_time\n",
+    "   rhomin_avg,rhomax_avg = float_range_rho\n",
+    "\n",
+    "   q_ar = []\n",
+    "   if q05_bool    : q_ar = np.append(q_ar,qprof_05)\n",
+    "   if q1_bool     : q_ar = np.append(q_ar,qprof_1)\n",
+    "   if q15_bool    : q_ar = np.append(q_ar,qprof_15)\n",
+    "   if q05n0_bool  : q_ar = np.append(q_ar,qprof_05_n0)\n",
+    "   if q15n0_bool  : q_ar = np.append(q_ar,qprof_15_n0)\n",
+    "   if q05new_bool : q_ar = np.append(q_ar,qprof_05new)\n",
+    "\n",
+    "   fig = plt.figure(figsize=(6*len(q_ar),12), dpi=dpi_adjust)\n",
+    "\n",
+    "   ax  = fig.add_subplot(111)\n",
+    "\n",
+    "   for iq,q in enumerate(q_ar):\n",
+    "\n",
+    "      irhomin = (np.abs(q['rho'] - 0.0 )).argmin()\n",
+    "      irhomax = (np.abs(q['rho'] - 1.1 )).argmin()\n",
+    "\n",
+    "      itmin = (np.abs(q['time'] - tmin_avg )).argmin()\n",
+    "      itmax = (np.abs(q['time'] - tmax_avg )).argmin()\n",
+    "\n",
+    "      #ax = fig.add_subplot(len(q_ar),1,iq+1)\n",
+    "      ax.set_title(q['title'])\n",
+    "      ax.plot(np.mean(q['Er'][itmin:itmax,irhomin:irhomax],axis=1), \n",
+    "              np.mean(q['dErdr'][itmin:itmax,irhomin:irhomax],axis=1), \n",
+    "              label=q['title'],c=q['c'],lw=3, ls='-')\n",
+    "      #ax.axhline(y=0,c='k',ls='--')\n",
+    "      ax.legend()\n",
+    "      ax.set_xlabel(r'$E_r$')\n",
+    "   fig.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
+    "   \n",
+    "float_range_time_slider = widgets.FloatRangeSlider(value=[10e3, 70e3], min=0, max=150e3, step=1000, description='Time range', layout=Layout(width='50%'), style = {'description_width': 'initial'})\n",
+    "\n",
+    "float_range_rho_slider = widgets.FloatRangeSlider(value=[0.84, 0.86], min=0, max=1.2, step=0.01, description='Normalized radius range', layout=Layout(width='50%'), style = {'description_width': 'initial'})\n",
+    "    \n",
+    "\n",
+    "interact(update_plot, \n",
+    "         float_range_time=float_range_time_slider,\n",
+    "         float_range_rho=float_range_rho_slider,\n",
+    "         dpi_adjust=widgets.FloatSlider(min=30, max=100, step=1,value=dpi_custom),\n",
+    "         q05_bool    = widgets.Checkbox(value=False,description='q05'),\n",
+    "         q1_bool     = widgets.Checkbox(value=False,description='q1'),\n",
+    "         q15_bool    = widgets.Checkbox(value=False,description='q15'),\n",
+    "         q05n0_bool  = widgets.Checkbox(value=True,description='q05n0'),\n",
+    "         q15n0_bool  = widgets.Checkbox(value=True,description='q15n0'),\n",
+    "         q05new_bool = widgets.Checkbox(value=False,description='q05new')\n",
     "        )"
    ]
   },
