--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -78,7 +78,7 @@
     "cadarache = 12\n",
     "home      = 16\n",
     "\n",
-    "xfigsize  = home\n",
+    "xfigsize  = laptop\n",
     "\n",
     "dpi_laptop = 50\n",
     "dpi_cadarache = 65\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -171,20 +171,10 @@
    },
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] Unable to open file (unable to open file: name = 'data/TS45511_q05.hdf5', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 21\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[39mreturn\u001b[39;00m d\n\u001b[0;32m     15\u001b[0m \u001b[39m#qprof_05 = pickle.load(open('data/TS45511_q05_ti0_te147600.pkl','rb'))\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[39m#qprof_1  = pickle.load(open('data/TS45511_q1_ti60300_te148500.pkl','rb'))\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[39m#qprof_15 = pickle.load(open('data/TS45511_q15_ti0_te153900.pkl','rb'))\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[39m#qprof_05_n0 = pickle.load(open('data/TS45511_q05_ti0_te72900_n0.pkl','rb'))\u001b[39;00m\n\u001b[0;32m     19\u001b[0m \u001b[39m#qprof_15_n0 = pickle.load(open('data/TS45511_q15_ti0_te72000_n0.pkl','rb'))\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m qprof_05 \u001b[39m=\u001b[39m hdf5_to_dict(\u001b[39m'\u001b[39;49m\u001b[39mdata/TS45511_q05.hdf5\u001b[39;49m\u001b[39m'\u001b[39;49m); qprof_05[\u001b[39m'\u001b[39m\u001b[39mtitle\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m=\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39m$q_\u001b[39m\u001b[39m{0.5}\u001b[39;00m\u001b[39m$\u001b[39m\u001b[39m'\u001b[39m; qprof_05[\u001b[39m'\u001b[39m\u001b[39mc\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mxkcd:electric blue\u001b[39m\u001b[39m'\u001b[39m; qprof_05[\u001b[39m'\u001b[39m\u001b[39mls\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m-\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     22\u001b[0m qprof_1  \u001b[39m=\u001b[39m hdf5_to_dict(\u001b[39m'\u001b[39m\u001b[39mdata/TS45511_q1.hdf5\u001b[39m\u001b[39m'\u001b[39m); qprof_1[\u001b[39m'\u001b[39m\u001b[39mtitle\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m=\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39m$q_\u001b[39m\u001b[39m{1.0}\u001b[39;00m\u001b[39m$\u001b[39m\u001b[39m'\u001b[39m; qprof_1[\u001b[39m'\u001b[39m\u001b[39mc\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mxkcd:bluish purple\u001b[39m\u001b[39m'\u001b[39m; qprof_1[\u001b[39m'\u001b[39m\u001b[39mls\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m-\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     23\u001b[0m qprof_15 \u001b[39m=\u001b[39m hdf5_to_dict(\u001b[39m'\u001b[39m\u001b[39mdata/TS45511_q15.hdf5\u001b[39m\u001b[39m'\u001b[39m); qprof_15[\u001b[39m'\u001b[39m\u001b[39mtitle\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m=\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39m$q_\u001b[39m\u001b[39m{1.5}\u001b[39;00m\u001b[39m$\u001b[39m\u001b[39m'\u001b[39m; qprof_15[\u001b[39m'\u001b[39m\u001b[39mc\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mxkcd:watermelon\u001b[39m\u001b[39m'\u001b[39m; qprof_15[\u001b[39m'\u001b[39m\u001b[39mls\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m-\u001b[39m\u001b[39m'\u001b[39m\n",
-      "Cell \u001b[1;32mIn[1], line 5\u001b[0m, in \u001b[0;36mhdf5_to_dict\u001b[1;34m(filename)\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mhdf5_to_dict\u001b[39m(filename):\n\u001b[0;32m      4\u001b[0m     \u001b[39m\"\"\"Load a dictionary of arrays and strings as unicode characters from an HDF5 file.\"\"\"\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m     \u001b[39mwith\u001b[39;00m h5py\u001b[39m.\u001b[39;49mFile(filename, \u001b[39m'\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m      6\u001b[0m         d \u001b[39m=\u001b[39m {}\n\u001b[0;32m      7\u001b[0m         \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m f\u001b[39m.\u001b[39mkeys():\n",
-      "File \u001b[1;32mc:\\Users\\robin\\anaconda3\\lib\\site-packages\\h5py\\_hl\\files.py:533\u001b[0m, in \u001b[0;36mFile.__init__\u001b[1;34m(self, name, mode, driver, libver, userblock_size, swmr, rdcc_nslots, rdcc_nbytes, rdcc_w0, track_order, fs_strategy, fs_persist, fs_threshold, fs_page_size, page_buf_size, min_meta_keep, min_raw_keep, locking, alignment_threshold, alignment_interval, **kwds)\u001b[0m\n\u001b[0;32m    525\u001b[0m     fapl \u001b[39m=\u001b[39m make_fapl(driver, libver, rdcc_nslots, rdcc_nbytes, rdcc_w0,\n\u001b[0;32m    526\u001b[0m                      locking, page_buf_size, min_meta_keep, min_raw_keep,\n\u001b[0;32m    527\u001b[0m                      alignment_threshold\u001b[39m=\u001b[39malignment_threshold,\n\u001b[0;32m    528\u001b[0m                      alignment_interval\u001b[39m=\u001b[39malignment_interval,\n\u001b[0;32m    529\u001b[0m                      \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n\u001b[0;32m    530\u001b[0m     fcpl \u001b[39m=\u001b[39m make_fcpl(track_order\u001b[39m=\u001b[39mtrack_order, fs_strategy\u001b[39m=\u001b[39mfs_strategy,\n\u001b[0;32m    531\u001b[0m                      fs_persist\u001b[39m=\u001b[39mfs_persist, fs_threshold\u001b[39m=\u001b[39mfs_threshold,\n\u001b[0;32m    532\u001b[0m                      fs_page_size\u001b[39m=\u001b[39mfs_page_size)\n\u001b[1;32m--> 533\u001b[0m     fid \u001b[39m=\u001b[39m make_fid(name, mode, userblock_size, fapl, fcpl, swmr\u001b[39m=\u001b[39;49mswmr)\n\u001b[0;32m    535\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(libver, \u001b[39mtuple\u001b[39m):\n\u001b[0;32m    536\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_libver \u001b[39m=\u001b[39m libver\n",
-      "File \u001b[1;32mc:\\Users\\robin\\anaconda3\\lib\\site-packages\\h5py\\_hl\\files.py:226\u001b[0m, in \u001b[0;36mmake_fid\u001b[1;34m(name, mode, userblock_size, fapl, fcpl, swmr)\u001b[0m\n\u001b[0;32m    224\u001b[0m     \u001b[39mif\u001b[39;00m swmr \u001b[39mand\u001b[39;00m swmr_support:\n\u001b[0;32m    225\u001b[0m         flags \u001b[39m|\u001b[39m\u001b[39m=\u001b[39m h5f\u001b[39m.\u001b[39mACC_SWMR_READ\n\u001b[1;32m--> 226\u001b[0m     fid \u001b[39m=\u001b[39m h5f\u001b[39m.\u001b[39;49mopen(name, flags, fapl\u001b[39m=\u001b[39;49mfapl)\n\u001b[0;32m    227\u001b[0m \u001b[39melif\u001b[39;00m mode \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mr+\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m    228\u001b[0m     fid \u001b[39m=\u001b[39m h5f\u001b[39m.\u001b[39mopen(name, h5f\u001b[39m.\u001b[39mACC_RDWR, fapl\u001b[39m=\u001b[39mfapl)\n",
-      "File \u001b[1;32mh5py\\_objects.pyx:54\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mh5py\\_objects.pyx:55\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mh5py\\h5f.pyx:106\u001b[0m, in \u001b[0;36mh5py.h5f.open\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] Unable to open file (unable to open file: name = 'data/TS45511_q05.hdf5', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['Er', 'Gamma_vD', 'Gamma_vE', 'Gamma_vEn0', 'Gamma_vEndiff0', 'IturbGC_FSavg', 'Phi00', 'Phi01', 'Ppar', 'Pperp', 'Qpar_vD', 'Qpar_vE', 'Qpar_vEn0', 'Qperp_vD', 'Qperp_vE', 'Qperp_vEn0', 'Qtot', 'Qtot_vD', 'Qtot_vE', 'Qtot_vEn0', 'RSphi', 'RSphi_vD', 'RSphi_vE', 'RSphi_vEn0', 'RSpol', 'RSpol_vD', 'RSpol_vE', 'RSpol_vEn0', 'T', 'VP', 'VT', 'dErdr', 'dPhi01dr', 'dRSphidr', 'dRSpoldr', 'dVPdr', 'dVTdr', 'delta_n_avg', 'eps', 'n', 'nIturbGC_FSavg', 'nu_i', 'nustar', 'q', 'rg', 'rho', 'spreading_0deg', 'spreading_180deg', 'spreading_270deg', 'spreading_90deg', 'spreading_FSavg', 'time', 'turb_int_avg', 'turb_int_sq_avg', 'title', 'c', 'ls'])\n"
      ]
     }
    ],
@@ -218,7 +208,8 @@
     "\n",
     "#qprof_gdp = pickle.load(open('data/gdp_ti0_te597900.pkl','rb')); qprof_gdp['title']=r'gdp'; qprof_gdp['c']='darkorange'\n",
     "\n",
-    "qprof_05new = pickle.load(open('data/TS45511_q05new_ti36180_te102780.pkl','rb')); qprof_05new['title']=r'$q_{0.5}^{NEW}$'; qprof_05new['c']='xkcd:lightish blue'; qprof_05new['ls']='-'\n",
+    "qprof_05new = hdf5_to_dict('data/TS45511_q05new.hdf5'); qprof_05new['title']=r'$q_{0.5}^{NEW}$'; qprof_05new['c']='xkcd:lightish blue'; qprof_05new['ls']='-'\n",
+    "\n",
     "\n",
     "print(qprof_05.keys())\n",
     "\n",
@@ -2764,14 +2755,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "9d426cdd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5546243e2d6d469ba3dd9075b80c1393",
+       "model_id": "25d6d88ac7cc424780c1d45b77640127",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2788,7 +2779,7 @@
        "<function __main__.update_plot(dpi_adjust, float_range_time, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, prefactor_bool)>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2850,7 +2841,102 @@
     "         q05n0_bool  = widgets.Checkbox(value=False,description='q05n0'),\n",
     "         q15n0_bool  = widgets.Checkbox(value=False,description='q15n0'),\n",
     "         q05new_bool = widgets.Checkbox(value=False,description='q05new'),\n",
-    "         prefactor_bool = widgets.Checkbox(value=True,description=r'With or without prefactor $1+2q^2$')\n",
+    "         prefactor_bool = widgets.Checkbox(value=True,description=r'With prefactor $1+2q^2$')\n",
+    "        )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8e12b073",
+   "metadata": {},
+   "source": [
+    "## <font color='coral'>**Travail en cours**</font> - Estimation de $\\nu_\\theta$ sur les simus néoclassiques"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b85cb121",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0aab7f012d36403ab1e5ad79d5ba3e6c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=65.0, description='dpi_adjust', min=30.0, step=1.0), FloatRangeSlider(…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.update_plot(dpi_adjust, float_range_time, float_range_rho, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool)>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def update_plot(dpi_adjust,float_range_time,float_range_rho,\n",
+    "               q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool):\n",
+    "\n",
+    "   tmin_avg,tmax_avg = float_range_time\n",
+    "   rhomin_avg,rhomax_avg = float_range_rho\n",
+    "\n",
+    "   q_ar = []\n",
+    "   if q05_bool    : q_ar = np.append(q_ar,qprof_05)\n",
+    "   if q1_bool     : q_ar = np.append(q_ar,qprof_1)\n",
+    "   if q15_bool    : q_ar = np.append(q_ar,qprof_15)\n",
+    "   if q05n0_bool  : q_ar = np.append(q_ar,qprof_05_n0)\n",
+    "   if q15n0_bool  : q_ar = np.append(q_ar,qprof_15_n0)\n",
+    "   if q05new_bool : q_ar = np.append(q_ar,qprof_05new)\n",
+    "\n",
+    "   fig = plt.figure(figsize=(6*len(q_ar),12), dpi=dpi_adjust)\n",
+    "\n",
+    "   ax  = fig.add_subplot(111)\n",
+    "\n",
+    "   for iq,q in enumerate(q_ar):\n",
+    "\n",
+    "      irhomin = (np.abs(q['rho'] - 0.0 )).argmin()\n",
+    "      irhomax = (np.abs(q['rho'] - 1.1 )).argmin()\n",
+    "\n",
+    "      itmin = (np.abs(q['time'] - tmin_avg )).argmin()\n",
+    "      itmax = (np.abs(q['time'] - tmax_avg )).argmin()\n",
+    "\n",
+    "      #ax = fig.add_subplot(len(q_ar),1,iq+1)\n",
+    "      ax.set_title(q['title'])\n",
+    "      ax.plot(np.mean(q['Er'][itmin:itmax,irhomin:irhomax],axis=1), \n",
+    "              np.mean(q['dErdr'][itmin:itmax,irhomin:irhomax],axis=1), \n",
+    "              label=q['title'],c=q['c'],lw=3, ls='-')\n",
+    "      #ax.axhline(y=0,c='k',ls='--')\n",
+    "      ax.legend()\n",
+    "      ax.set_xlabel(r'$E_r$')\n",
+    "   fig.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
+    "   \n",
+    "float_range_time_slider = widgets.FloatRangeSlider(value=[10e3, 70e3], min=0, max=150e3, step=1000, description='Time range', layout=Layout(width='50%'), style = {'description_width': 'initial'})\n",
+    "\n",
+    "float_range_rho_slider = widgets.FloatRangeSlider(value=[0.84, 0.86], min=0, max=1.2, step=0.01, description='Normalized radius range', layout=Layout(width='50%'), style = {'description_width': 'initial'})\n",
+    "    \n",
+    "\n",
+    "interact(update_plot, \n",
+    "         float_range_time=float_range_time_slider,\n",
+    "         float_range_rho=float_range_rho_slider,\n",
+    "         dpi_adjust=widgets.FloatSlider(min=30, max=100, step=1,value=dpi_custom),\n",
+    "         q05_bool    = widgets.Checkbox(value=False,description='q05'),\n",
+    "         q1_bool     = widgets.Checkbox(value=False,description='q1'),\n",
+    "         q15_bool    = widgets.Checkbox(value=False,description='q15'),\n",
+    "         q05n0_bool  = widgets.Checkbox(value=True,description='q05n0'),\n",
+    "         q15n0_bool  = widgets.Checkbox(value=True,description='q15n0'),\n",
+    "         q05new_bool = widgets.Checkbox(value=False,description='q05new')\n",
     "        )"
    ]
   },
@@ -3138,7 +3224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
