--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "id": "8ce0e36c-fce9-4840-a583-0c5d98c19af1",
    "metadata": {
     "jupyter": {
@@ -383,7 +383,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ee14815bc60402e8bc04e5b625905c0",
+       "model_id": "09a5790339c24d4dbeda28c1fab2a78b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -397,7 +397,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4407b466c2594dffabb72764f009fe9a",
+       "model_id": "d06c10b7c454424abdd8957cdecf8b69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -414,7 +414,7 @@
        "<function __main__.update_plot(N, dpi_adjust, param, param2, float_range_time, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool)>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,12 +437,13 @@
     "\n",
     "    ## Clear previous plot\n",
     "    ax_rprof.clear(); ax_rprof2.clear()\n",
+    "    ax_rprof2.grid(False)\n",
     "    \n",
     "    fig.suptitle(r'Study of %s' %param)\n",
     "    \n",
     "    for q in q_ar:\n",
     "\n",
-    "        irhomin = (np.abs(q['rho'] - 0.1 )).argmin()\n",
+    "        irhomin = (np.abs(q['rho'] - 0.01 )).argmin()\n",
     "        irhomax = (np.abs(q['rho'] - 1.1 )).argmin()\n",
     "        \n",
     "        itmin_avg = (np.abs(q['time'] - tmin_avg )).argmin()\n",
@@ -463,7 +464,6 @@
     "            p_ma2 = uniform_filter1d(uniform_filter1d(q[param2],size=N,axis=1),size=N,axis=1)\n",
     "            \n",
     "            ax_rprof2.plot(q['rho'][irhomin:irhomax], np.mean( p_ma2[itmin_avg:itmax_avg,irhomin:irhomax],axis=0),ls=q['ls'],c=q['c2'],label=q['title'])\n",
-    "            ax_rprof2.grid(None)\n",
     "            ax_rprof2.yaxis.label.set_color(color2)\n",
     "            ax_rprof2.tick_params(axis='y', colors=color2)\n",
     "        \n",
@@ -499,14 +499,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "8fdc5558",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0102bd09445f4b65bd497b126917e2f5",
+       "model_id": "1ef081fe5c75480dbb5830e10bdf76ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -520,7 +520,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23659f76c125496a9961209387f7a2e7",
+       "model_id": "50bf2653ebad4ee782dec133d26d5dbd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -537,7 +537,7 @@
        "<function __main__.update_plot(N, dpi_adjust, param, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, it_play)>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
